# libISW

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  DESIGN_GOALS.md  FONT_REFACTOR_PLAN.md  KEYBOARD_NAV_PLAN.md  Makefile.am  Makefile.in  README  TODO.md  aclocal.m4  config.h.cmake.in  config.h.in  configure  configure.ac  isw.pc.cmake.in  isw.pc.in  xaw3d.pc.in
.claude/: settings.json
build-cmake/: ISWConfig.cmake  cmake_install.cmake
cmake/: ISWConfig.cmake.in
docs/: CLAUDE_APP_GUIDE.md
examples/: isw_demo  isw_demo.c  isw_demo_3d.c  multi_stubs.c  xaw3d_demo.c  xaw3d_demo_3d.c
include/: Makefile.am  Makefile.in
include/ISW/: AllWidgets.h  AsciiSink.h  AsciiSinkP.h  AsciiSrc.h  AsciiSrcP.h  AsciiText.h  AsciiTextP.h  Box.h  BoxP.h  Cardinals.h  ColorPicker.h  ColorPickerP.h  ComboBox.h  ComboBoxP.h  Command.h  CommandP.h  Dialog.h  DialogP.h  DrawingArea.h  DrawingAreaP.h  FlexBox.h  FlexBoxP.h  FontChooser.h  FontChooserP.h  Form.h  FormP.h  Grip.h  GripP.h  ISWContext.h  ISWImP.h  ISWImage.h  ISWInit.h  ISWP.h  ISWPNG.h  ISWRender.h  ISWSVG.h  ISWXdnd.h  ISWXftCompat.h  IconView.h  IconViewP.h  (+77 more)
include/X11/: ContextI.h  CoreP.h  CreateI.h  EventI.h  HookObjI.h  InitialI.h  Intrinsic.h  IntrinsicI.h  IntrinsicP.h  ObjectP.h  PassivGraI.h  RectObjP.h  ResConfigP.h  SelectionI.h  Shell.h  ShellI.h  ShellP.h  StringDefs.h  ThreadsI.h  TranslateI.h  XtDatabase.h  XtFuncproto.h  XtOptions.h  XtQuark.h  XtTypes.h  XtValue.h  Xtos.h
include/X11/Xaw3d/: AllWidgets.h  AsciiSink.h  AsciiSinkP.h  AsciiSrc.h  AsciiSrcP.h  AsciiText.h  AsciiTextP.h  Box.h  BoxP.h  Command.h  CommandP.h  Dialog.h  DialogP.h  FormP.h  Grip.h  GripP.h  Label.h  LabelP.h  LayoutP.h  List.h  ListP.h  MenuButtoP.h  MenuButton.h  MultiSink.h  MultiSinkP.h  MultiSrc.h  MultiSrcP.h  Paned.h  PanedP.h  Panner.h  PannerP.h  Porthole.h  PortholeP.h  Repeater.h  RepeaterP.h  Scrollbar.h  ScrollbarP.h  Simple.h  SimpleMenP.h  SimpleMenu.h  (+32 more)
plans/: CONVERSION_ANALYSIS.md  IMPLEMENTATION_PLAN_REVISED.md  LIBXT_MERGE_PLAN.md  PORTING_GUIDELINES.md  XAW3D_TO_ISW_RENAMING_PLAN.md
scripts/: rename_files.sh  rename_symbols.sh  update_includes.sh
src/: AllWidgets.c  Alloc.c  AsciiSink.c  AsciiSrc.c  AsciiText.c  Box.c  Callback.c  ClickTime.c  ColorPicker.c  ComboBox.c  Command.c  Context.c  Convert.c  Converters.c  Core.c  Create.c  Destroy.c  Dialog.c  Display.c  DrawingArea.c  Error.c  Event.c  EventUtil.c  FlexBox.c  FontChooser.c  Form.c  Functions.c  GCManager.c  Geometry.c  GetActKey.c  GetValues.c  Grip.c  Hooks.c  ISWAtoms.c  ISWContext.c  ISWDrawing.c  ISWI18n.c  ISWI18n.h  ISWIm.c  ISWImage.c  (+110 more)
util/: Makefile.am  makestrs  string.list
