iswincludedir=${includedir}/ISW

if ISW_INTERNATIONALIZATION
I18N_HDRS = \
       ISW/MultiSrc.h \
       ISW/MultiSrcP.h \
       ISW/MultiSink.h \
       ISW/MultiSinkP.h \
       ISW/VendorEP.h \
       ISW/ISWImP.h
endif

iswinclude_HEADERS = \
	ISW/AllWidgets.h \
	ISW/AsciiSink.h \
	ISW/AsciiSinkP.h \
	ISW/AsciiSrc.h \
	ISW/AsciiSrcP.h \
	ISW/AsciiText.h \
	ISW/AsciiTextP.h \
	ISW/Box.h \
	ISW/BoxP.h \
	ISW/Cardinals.h \
	ISW/Command.h \
	ISW/CommandP.h \
	ISW/Dialog.h \
	ISW/DialogP.h \
	ISW/Form.h \
	ISW/FormP.h \
	ISW/Grip.h \
	ISW/GripP.h \
	ISW/Label.h \
	ISW/LabelP.h \
	ISW/Layout.h \
	ISW/LayoutP.h \
	ISW/List.h \
	ISW/ListP.h \
	ISW/MenuButton.h \
	ISW/MenuButtoP.h \
	ISW/Paned.h \
	ISW/PanedP.h \
	ISW/Panner.h \
	ISW/PannerP.h \
	ISW/Porthole.h \
	ISW/PortholeP.h \
	ISW/Repeater.h \
	ISW/RepeaterP.h \
	ISW/Reports.h \
	ISW/Scrollbar.h \
	ISW/ScrollbarP.h \
	ISW/Simple.h \
	ISW/SimpleMenP.h \
	ISW/SimpleMenu.h \
	ISW/SimpleP.h \
	ISW/SmeBSB.h \
	ISW/SmeBSBP.h \
	ISW/Sme.h \
	ISW/SmeLine.h \
	ISW/SmeLineP.h \
	ISW/SmeP.h \
	ISW/SmeThreeD.h \
	ISW/SmeThreeDP.h \
	ISW/StripCharP.h \
	ISW/StripChart.h \
	ISW/Text.h \
	ISW/TextP.h \
	ISW/TextSink.h \
	ISW/TextSinkP.h \
	ISW/TextSrc.h \
	ISW/TextSrcP.h \
	ISW/ThreeD.h \
	ISW/ThreeDP.h \
	ISW/Tip.h \
	ISW/TipP.h \
	ISW/Toggle.h \
	ISW/ToggleP.h \
	ISW/Tree.h \
	ISW/TreeP.h \
	ISW/Viewport.h \
	ISW/ViewportP.h \
	ISW/ISWP.h \
	ISW/ISWInit.h \
	$(I18N_HDRS)

EXTRA_DIST = \
	ISW/Template.h \
	ISW/TemplateP.h