iswincludedir=${includedir}/ISW

if ISW_INTERNATIONALIZATION
I18N_HDRS = \
       ISW/MultiSrc.h \
       ISW/MultiSrcP.h \
       ISW/MultiSink.h \
       ISW/MultiSinkP.h \
       ISW/VendorEP.h \
       ISW/ISWImP.h
endif

iswinclude_HEADERS = \
	ISW/AllWidgets.h \
	ISW/AsciiSink.h \
	ISW/AsciiSinkP.h \
	ISW/AsciiSrc.h \
	ISW/AsciiSrcP.h \
	ISW/AsciiText.h \
	ISW/AsciiTextP.h \
	ISW/Box.h \
	ISW/BoxP.h \
	ISW/Cardinals.h \
	ISW/Command.h \
	ISW/CommandP.h \
	ISW/Dialog.h \
	ISW/DialogP.h \
	ISW/Form.h \
	ISW/FormP.h \
	ISW/Grip.h \
	ISW/GripP.h \
	ISW/Label.h \
	ISW/LabelP.h \
	ISW/Layout.h \
	ISW/LayoutP.h \
	ISW/List.h \
	ISW/ListP.h \
	ISW/MenuButton.h \
	ISW/MenuButtoP.h \
	ISW/Paned.h \
	ISW/PanedP.h \
	ISW/Panner.h \
	ISW/PannerP.h \
	ISW/Porthole.h \
	ISW/PortholeP.h \
	ISW/Repeater.h \
	ISW/RepeaterP.h \
	ISW/Reports.h \
	ISW/Scrollbar.h \
	ISW/ScrollbarP.h \
	ISW/Simple.h \
	ISW/SimpleMenP.h \
	ISW/SimpleMenu.h \
	ISW/SimpleP.h \
	ISW/SmeBSB.h \
	ISW/SmeBSBP.h \
	ISW/Sme.h \
	ISW/SmeLine.h \
	ISW/SmeLineP.h \
	ISW/SmeP.h \
	ISW/StripCharP.h \
	ISW/StripChart.h \
	ISW/Text.h \
	ISW/TextP.h \
	ISW/TextSink.h \
	ISW/TextSinkP.h \
	ISW/TextSrc.h \
	ISW/TextSrcP.h \
	ISW/Tip.h \
	ISW/TipP.h \
	ISW/Toggle.h \
	ISW/ToggleP.h \
	ISW/Tree.h \
	ISW/TreeP.h \
	ISW/Viewport.h \
	ISW/ViewportP.h \
	ISW/ISWP.h \
	ISW/ISWInit.h \
	$(I18N_HDRS)

# X Toolkit Intrinsics headers (libXt)
xtincludedir = $(includedir)/X11
xtinclude_HEADERS = \
	X11/CallbackI.h \
	X11/Composite.h \
	X11/CompositeP.h \
	X11/ConstrainP.h \
	X11/Constraint.h \
	X11/ContextI.h \
	X11/ConvertI.h \
	X11/Core.h \
	X11/CoreP.h \
	X11/CreateI.h \
	X11/EventI.h \
	X11/HookObjI.h \
	X11/InitialI.h \
	X11/Intrinsic.h \
	X11/IntrinsicI.h \
	X11/IntrinsicP.h \
	X11/Object.h \
	X11/ObjectP.h \
	X11/PassivGraI.h \
	X11/RectObj.h \
	X11/RectObjP.h \
	X11/ResConfigP.h \
	X11/ResourceI.h \
	X11/SelectionI.h \
	X11/ShellI.h \
	X11/ShellP.h \
	X11/ThreadsI.h \
	X11/TranslateI.h \
	X11/VarargsI.h \
	X11/Vendor.h \
	X11/VendorP.h \
	X11/XtDatabase.h \
	X11/XtFuncproto.h \
	X11/XtOptions.h \
	X11/Xtos.h \
	X11/XtQuark.h \
	X11/XtTypes.h \
	X11/XtValue.h \
	X11/utlist.h

# Generated headers (created during build)
nodist_xtinclude_HEADERS = \
	X11/StringDefs.h \
	X11/Shell.h

DISTCLEANFILES = \
	X11/StringDefs.h \
	X11/Shell.h

# Top-level utility headers
nobase_include_HEADERS = uthash.h

EXTRA_DIST = \
	ISW/Template.h \
	ISW/TemplateP.h